# rocket_web

./: Cargo.toml  README.md  Rocket.toml
src/: common.rs  main.rs  middleware.rs  views.rs
src/account/: login.rs  register.rs
static/html/: about.html  case-studies-details.html  case-studies.html  contact-us.html  index.html  login.html  service.html  sign-up.html
static/html/css/: responsive.css  style.css
static/html/font/flat-icon/font/: Flaticon.eot  flaticon.css
static/html/js/: custom.js  map-script.js
