[package]
name = "hellorocket"
version = "0.1.0"
authors = ["Dominant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
#rocket_contrib = "*"
rusqlite = { version = "*", features = ["bundled"] }
time = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
lettre = "0.10.0-beta.3"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]